--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 DATABASE_URL="postgresql://postgres:SUA_SENHA@127.0.0.1:5432/sistema_qualidade"
 SECRET_KEY="uma-chave-muito-segura"
-FLASK_APP="wsgi.py"
+FLASK_APP="wsgi.py"psql -U postgres
