--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,14 @@
 Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.7
+Flask-JWT-Extended==4.6.0
+Flask-Cors==4.0.1
 python-dotenv==1.0.1
 waitress==3.0.0
+psycopg2-binary==2.9.9
+SQLAlchemy==2.0.32
+alembic==1.13.2
+Werkzeug==3.0.3
+click==8.1.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
